# faqbot

./: README.md  pylama.ini  pyproject.toml
.github/workflows/: python-ci.yml
faqbot/: __init__.py  cli.py  hooks.py  orm.py  utils.py
tests/: test_bot.py
