[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.3.1"
name = "deltachat-faqbot"
description = "FAQ bot, help to answer common questions in support groups"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["deltachat", "bot"]
authors = [
  {name = "adbenitez", email = "adbenitez@hispanilandia.net"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "SQLAlchemy>=1.4.44",
    "deltabot-cli>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
]

[project.scripts]
faqbot = "faqbot:main"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
